--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
           <div class="card-body text-dark">
 
             <div class="input-group mb-3">
-              <button class="btn btn-outline-secondary disabled" type="button">XP per Kill</button>
+              <button class="btn btn-outline-secondary disabled" type="button">XP por Kill</button>
               <input type="text" class="form-control" placeholder="1000" aria-label="XP Per Kill" id="xp-per-kill">
             </div>
             <div class="input-group mb-3" id="manual-group">
-              <button class="btn btn-outline-secondary disabled" type="button">Kills Per Minute</button>
+              <button class="btn btn-outline-secondary disabled" type="button">Kills por Minuto</button>
               <input type="text" class="form-control" placeholder="60" aria-label="Kills per Minute" aria-describedby="ManualXPKill" id="kill-per-minute">
               <button class="btn btn-outline-secondary" type="button" id="ManualXPKill">Manual</button>
             </div>
