--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
           <div class="card-header text-center">Data output</div>
           <div class="card-body text-dark">
             <div class="input-group mb-3">
-              <button class="btn btn-outline-secondary disabled" type="button">XP per Minute</button>
+              <button class="btn btn-outline-secondary disabled" type="button">XP por Minute</button>
               <input type="text" class="form-control text-end" placeholder="" aria-label="XP Per Kill" id="xp-minute">
             </div>
             <div class="input-group mb-3">
-              <button class="btn btn-outline-secondary disabled" type="button">XP per Hour</button>
+              <button class="btn btn-outline-secondary disabled" type="button">XP por Hora</button>
               <input type="text" class="form-control text-end" placeholder="" aria-label="XP Per Kill" id="xp-hour">
             </div>
             <div class="input-group mb-3">
-              <button class="btn btn-outline-secondary disabled" type="button">XP per 8 Hours</button>
+              <button class="btn btn-outline-secondary disabled" type="button">XP por 8 Horas</button>
               <input type="text" class="form-control text-end" placeholder="" aria-label="XP Per Kill" id="xp-8hour">
             </div>
             <div class="input-group mb-3">
-              <button class="btn btn-outline-secondary disabled" type="button">XP per Day</button>
+              <button class="btn btn-outline-secondary disabled" type="button">XP por Dia</button>
               <input type="text" class="form-control text-end" placeholder="" aria-label="XP Per Kill" id="xp-24hour">
             </div>
           </div>
