--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="card-header text-center">Data output</div>
           <div class="card-body text-dark">
             <div class="input-group mb-3">
-              <button class="btn btn-outline-secondary disabled" type="button">XP por Minute</button>
+              <button class="btn btn-outline-secondary disabled" type="button">XP por Minuto</button>
               <input type="text" class="form-control text-end" placeholder="" aria-label="XP Per Kill" id="xp-minute">
             </div>
             <div class="input-group mb-3">
